--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My Test Home Page</h1>
+<h1>My portfolio</h1>
 <p>My First Paragraph</p>
 <img src="images/home-page-product.png" ></img> 
+<img src="images/a.jpg" ></img> 
 </body>
 </html>
