--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <p>My First Paragraph</p>
 <img src="images/home-page-product.png" ></img> 
 <img src="images/a.jpg" ></img> 
-</body>
+<a href="hello-world.html">hello-world</a>
+<a href="https://scratch.mit.edu/projects/121064659/">1.1.4</a> 
+<a href="https://scratch.mit.edu/projects/121057254/#player">1.1.3</a>
+<a href="https://scratch.mit.edu/projects/121985958/">story</a>
 </html>
